<resources>
    <string name="app_name">Simple Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password1">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="get_otp">Get OTP</string>
</resources>