<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbacground"
    tools:context=".NewUser">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="92dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/StringColour"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gotoRegisterpass"
        app:layout_constraintTop_toBottomOf="@+id/gotoRegisterpass" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/person"
        android:hint="@string/last_name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="@+id/firstName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border"
        android:text="@string/get_otp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="@+id/gotoRegisterpass2"
        app:layout_constraintStart_toEndOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.85" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/person"
        android:hint="@string/first_name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/gotoRegisterpass2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/gotoRegisterpass"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toEndOf="@+id/gotoRegisterpass"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/gotoRegisterpass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/round_border2"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/gotoRegisterpass2"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/otptext"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border2"
        android:hint="Enter OTP"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:visibility="gone"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border2"
        android:text="Regiser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otptext"
        app:layout_constraintVertical_bias="0.148" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/home_style"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>